[metadata]
name = languagemodels
version = 0.0.1

[options]
install_requires =
    wheel
    autopep8
    numpy
    pandas
    matplotlib
    ipython
    notebook
    jupyter
    ipywidgets
    pytest
    lingpy
    wandb
    datasets==2.4.0
    tokenizers==0.12.1
    transformers==4.18.0

packages = find:
package_dir =
    =src

scripts=
    bin/train_lm
    bin/train_tokenizer

python_version >= 3.7

[options.packages.find]
where = src
include = languagemodels*
