[metadata]
name = languagemodels
version = 0.0.1

[options]
install_requires =
    wheel
    autopep8
    numpy
    pandas
    matplotlib
    ipython
    notebook
    jupyter
    ipywidgets
    pytest
    # lingpy
    wandb

    datasets==2.18.0
    tokenizers==0.15.2
    transformers==4.38.2

packages = find:
package_dir =
    =src

python_version >= 3.7

[options.packages.find]
where = src
include = languagemodels*